# jellyfish-chain

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
design/: coding.md  concept.md  functionality.md  usecase.md
jellyfish-core/: Cargo.toml
jellyfish-core/src/: account.rs  block.rs  byteorder.rs  difficulty.rs  digest.rs  jellyfish_transaction.rs  lib.rs  signature.rs  timestamp.rs  transaction.rs  verification.rs
